# spotlight-remap

./: README.md  main.py  pyproject.toml
src/: actions.py  constants.py  hidpp.py  keys.py  keystroke.py  learn.py  main.py  mappings.py  remap.py  restore.py
