[project]
name = "spotlight-remap"
version = "0.1.0"
description = "Remaps Spotlight 2 presentation remote buttons to custom key events"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hidapi",
    "pyobjc-framework-Quartz",
]

[project.scripts]
spotlight-remap = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
